Fixed certain padding issues, along with aligning checkboxes to be on the same line as the labels corresponding to them (Hurray!)(#45)
* Patch to Issue #37. New Regex parser for search query terms

* Changed var to let, added tester for undefined empty string

* Password confirmation added on default/mobile footers and sign up page

* Issue #5 bug fix, though code is inline

* Fixed signup page layout, also still inline

* Fixed Issue #5, along with centering submit button on Desktop view, and slight padding adjustment for sticky header logo

--- a/public/scss/layouts/footer/_footer-mobile.scss
+++ b/public/scss/layouts/footer/_footer-mobile.scss
@@ -156,13 +156,31 @@ $footer-bg : $gray-100;
                     width: 46px;
                     padding: 0;
                     
-                }              
+                }
+                
+                .terms-container {
+                    display: flex;
+                    height: 2em;
+
+                    .terms-checkbox {
+                        margin-right: 1em;
+                        margin-left: 5px;
+                        width: 20px;
+                        height: 100%;
+                    }
+                    
+                    .terms-text {
+                        align-self: center;
+                    }
+
+                }
               
             }
             p{
                 font-size: $font-size-sm;
                 color: $body-color-secondary;
             }
+
 
         }
     }
